# bevy_hui

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  publish.sh
crates/bevy_hui/: Cargo.toml
crates/bevy_hui/src/: animation.rs  bindings.rs  build.rs  compile.rs  data.rs  lib.rs  load.rs  parse.rs  styles.rs
crates/bevy_hui_widgets/: Cargo.toml
crates/bevy_hui_widgets/src/: input.rs  select.rs  slider.rs
docs/: cheatsheet.md
example/: Cargo.toml
example/assets/demo/: dialog.html  menu.html  panel.html
example/assets/widgets/: widgets_demo.html
example/src/: animation.rs  dialog.rs  maud.rs  ui.rs  widgets.rs
